using System;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string moveX = "moveX";
    internal static string moveY = "moveY";
    internal static string attackTrigger = "attackTrigger";
    internal static string playerDirection = "playerDirection";
}